feat(backend): update database seeding, config, controllers, and services