@@ -1,22 +1,24 @@
 package com.workflow.service;
 
+import com.google.auth.oauth2.GoogleCredentials;
+import com.google.cloud.storage.Blob;
+import com.google.cloud.storage.Bucket;
+import com.google.cloud.storage.Storage;
+import com.google.cloud.storage.StorageOptions;
+import com.google.cloud.storage.BlobInfo;
 import com.workflow.domain.model.ArchivoAdjunto;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
-import org.springframework.core.io.ByteArrayResource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import com.google.cloud.storage.Storage;
-import com.google.cloud.storage.StorageOptions;
-import com.google.cloud.storage.BlobId;
-import com.google.cloud.storage.BlobInfo;
-import com.google.cloud.storage.Blob;
-
 import jakarta.annotation.PostConstruct;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -28,8 +30,9 @@ import java.util.List;
 import java.util.UUID;
 
 /**
- * Servicio de almacenamiento de archivos adjuntos.
- * Soporta almacenamiento en Google Cloud Storage (producción) y sistema de archivos local (desarrollo/fallback).
+ * Servicio híbrido de almacenamiento de archivos.
+ * Soporta Google Cloud Storage (GCS) y almacén en disco local como respaldo (fallback).
+ * Autodetecta credenciales locales y de Google Cloud Run mediante Application Default Credentials (ADC).
  */
 @Slf4j
 @Service
@@ -51,33 +54,60 @@ public class ArchivoStorageService {
     @Value("${app.uploads.dir:./uploads}")
     private String uploadsDir;
 
-    @Value("${BUCKET_NAME:${app.gcp.bucket-name:}}")
+    @Value("${app.gcp.bucket-name:}")
     private String bucketName;
 
+    @Value("${app.firebase.credentials-path:${FIREBASE_CREDENTIALS_PATH:}}")
+    private String credentialsPath;
+
+    @Value("${app.firebase.project-id:${FIREBASE_PROJECT_ID:}}")
+    private String firebaseProjectId;
+
     private Path uploadsPath;
-    private Storage storage;
+    private Storage storageClient;
+    private boolean useGcs = false;
 
     @PostConstruct
     void inicializar() {
+        // 1. Inicializar almacenamiento local (siempre listo como backup)
         uploadsPath = Paths.get(uploadsDir).toAbsolutePath().normalize();
         try {
             Files.createDirectories(uploadsPath);
-            log.info("Directorio de uploads local inicializado: {}", uploadsPath);
+            log.info("Directorio de uploads local inicializado en: {}", uploadsPath);
         } catch (IOException e) {
-            throw new RuntimeException("No se pudo crear el directorio de uploads local: " + uploadsPath, e);
+            log.error("No se pudo crear el directorio de uploads local: {}", uploadsPath, e);
         }
 
-        if (bucketName != null && !bucketName.trim().isEmpty()) {
-            try {
-                this.storage = StorageOptions.getDefaultInstance().getService();
-                log.info("Google Cloud Storage inicializado con el bucket: {}", bucketName);
-            } catch (Exception e) {
-                log.error("No se pudo conectar a Google Cloud Storage. Se usará almacenamiento local como fallback.", e);
-                this.storage = null;
+        // 2. Intentar inicializar Google Cloud Storage
+        try {
+            GoogleCredentials credentials;
+            if (credentialsPath != null && !credentialsPath.isBlank()) {
+                try (InputStream stream = new FileInputStream(credentialsPath)) {
+                    credentials = GoogleCredentials.fromStream(stream);
+                }
+            } else {
+                credentials = GoogleCredentials.getApplicationDefault();
             }
-        } else {
-            log.info("Google Cloud Storage no configurado (BUCKET_NAME no especificado). Usando almacenamiento local.");
-            this.storage = null;
+
+            StorageOptions.Builder optionsBuilder = StorageOptions.newBuilder()
+                    .setCredentials(credentials);
+            if (firebaseProjectId != null && !firebaseProjectId.isBlank()) {
+                optionsBuilder.setProjectId(firebaseProjectId);
+            }
+            
+            storageClient = optionsBuilder.build().getService();
+            
+            if (bucketName != null && !bucketName.isBlank()) {
+                Bucket bucket = storageClient.get(bucketName);
+                if (bucket != null) {
+                    useGcs = true;
+                    log.info("¡Google Cloud Storage Inicializado! Usando bucket: {}", bucketName);
+                } else {
+                    log.warn("El bucket {} no fue encontrado o es inaccesible. Se usará almacenamiento local.", bucketName);
+                }
+            }
+        } catch (Exception e) {
+            log.warn("No se pudo conectar a Google Cloud Storage ({}). Se usará almacenamiento local como backup.", e.getMessage());
         }
     }
 
@@ -101,7 +131,6 @@ public class ArchivoStorageService {
 
     /**
      * Almacena un único archivo y retorna sus metadatos.
-     * Si está configurado Google Cloud Storage, sube el archivo al bucket. De lo contrario, guarda localmente.
      */
     public ArchivoAdjunto almacenarArchivo(MultipartFile archivo, String usuario) {
         validarArchivo(archivo);
@@ -110,48 +139,44 @@ public class ArchivoStorageService {
         String extension = extraerExtension(archivo.getOriginalFilename());
         String nombreAlmacenado = id + extension;
 
-        // Intentar subir a Google Cloud Storage
-        if (storage != null && bucketName != null && !bucketName.trim().isEmpty()) {
+        if (useGcs) {
             try {
-                BlobId blobId = BlobId.of(bucketName, nombreAlmacenado);
-                BlobInfo blobInfo = BlobInfo.newBuilder(blobId)
+                String gcsBlobPath = "uploads/" + nombreAlmacenado;
+                BlobInfo blobInfo = BlobInfo.newBuilder(bucketName, gcsBlobPath)
                         .setContentType(archivo.getContentType())
                         .build();
 
-                storage.create(blobInfo, archivo.getBytes());
-                log.info("Archivo almacenado en GCS: {} -> {} en bucket {} por {}", 
-                        archivo.getOriginalFilename(), nombreAlmacenado, bucketName, usuario);
+                storageClient.create(blobInfo, archivo.getBytes());
+                log.info("Archivo almacenado en Google Cloud Storage: {} -> {} por {}", archivo.getOriginalFilename(), gcsBlobPath, usuario);
 
                 return ArchivoAdjunto.builder()
                         .id(id)
                         .nombreOriginal(archivo.getOriginalFilename())
-                        .nombreAlmacenado(nombreAlmacenado)
+                        .nombreAlmacenado("gcs:" + gcsBlobPath)
                         .tipoContenido(archivo.getContentType())
                         .tamanoBytes(archivo.getSize())
                         .subidoPor(usuario)
                         .fechaSubida(LocalDateTime.now())
                         .build();
-
-            } catch (IOException e) {
-                log.error("Error al subir archivo a GCS: {}. Usando almacenamiento local como fallback.", archivo.getOriginalFilename(), e);
+            } catch (Exception e) {
+                log.error("Error al subir archivo a GCS. Intentando almacenamiento local de respaldo.", e);
             }
         }
 
-        // Fallback: almacenamiento local
+        // Fallback: Almacenamiento local
         try {
             Path destino = uploadsPath.resolve(nombreAlmacenado).normalize();
-            // Prevenir path traversal
             if (!destino.startsWith(uploadsPath)) {
                 throw new IllegalArgumentException("Ruta de archivo inválida");
             }
 
             Files.copy(archivo.getInputStream(), destino, StandardCopyOption.REPLACE_EXISTING);
-            log.info("Archivo almacenado localmente: {} -> {} por {}", archivo.getOriginalFilename(), nombreAlmacenado, usuario);
+            log.info("Archivo almacenado en disco local (fallback): {} -> {} por {}", archivo.getOriginalFilename(), nombreAlmacenado, usuario);
 
             return ArchivoAdjunto.builder()
                     .id(id)
                     .nombreOriginal(archivo.getOriginalFilename())
-                    .nombreAlmacenado(nombreAlmacenado)
+                    .nombreAlmacenado("local:" + nombreAlmacenado)
                     .tipoContenido(archivo.getContentType())
                     .tamanoBytes(archivo.getSize())
                     .subidoPor(usuario)
@@ -159,37 +184,52 @@ public class ArchivoStorageService {
                     .build();
 
         } catch (IOException e) {
-            throw new RuntimeException("Error al almacenar archivo local: " + archivo.getOriginalFilename(), e);
+            throw new RuntimeException("Error al almacenar archivo en local: " + archivo.getOriginalFilename(), e);
         }
     }
 
     /**
      * Carga un archivo como Resource para descarga.
-     * Busca primero en Google Cloud Storage si está habilitado y, si no lo encuentra, busca localmente.
      */
     public Resource cargarArchivo(String nombreAlmacenado) {
-        // Intentar cargar desde Google Cloud Storage
-        if (storage != null && bucketName != null && !bucketName.trim().isEmpty()) {
+        String realName = nombreAlmacenado;
+        boolean isGcs = false;
+
+        if (nombreAlmacenado.startsWith("gcs:")) {
+            realName = nombreAlmacenado.substring(4);
+            isGcs = true;
+        } else if (nombreAlmacenado.startsWith("local:")) {
+            realName = nombreAlmacenado.substring(6);
+            isGcs = false;
+        } else {
+            // Retrocompatibilidad con archivos antiguos sin prefijo
+            isGcs = useGcs;
+        }
+
+        if (isGcs && storageClient != null) {
             try {
-                Blob blob = storage.get(BlobId.of(bucketName, nombreAlmacenado));
+                Blob blob = storageClient.get(bucketName, realName);
                 if (blob != null && blob.exists()) {
                     byte[] content = blob.getContent();
+                    final String finalRealName = realName;
                     return new ByteArrayResource(content) {
                         @Override
                         public String getFilename() {
-                            return nombreAlmacenado;
+                            if (finalRealName.contains("/")) {
+                                return finalRealName.substring(finalRealName.lastIndexOf("/") + 1);
+                            }
+                            return finalRealName;
                         }
                     };
                 }
-                log.warn("Archivo no encontrado en GCS: {}. Buscando en disco local...", nombreAlmacenado);
             } catch (Exception e) {
-                log.error("Error al recuperar archivo de GCS: {}. Buscando en disco local...", nombreAlmacenado, e);
+                log.error("Error al descargar desde Google Cloud Storage ({}). Reintentando en local.", e.getMessage());
             }
         }
 
-        // Cargar del disco local
+        // Cargar desde disco local
         try {
-            Path filePath = uploadsPath.resolve(nombreAlmacenado).normalize();
+            Path filePath = uploadsPath.resolve(realName).normalize();
             if (!filePath.startsWith(uploadsPath)) {
                 throw new IllegalArgumentException("Ruta de archivo inválida");
             }
@@ -198,10 +238,10 @@ public class ArchivoStorageService {
             if (resource.exists() && resource.isReadable()) {
                 return resource;
             }
-            throw new RuntimeException("Archivo no encontrado: " + nombreAlmacenado);
+            throw new RuntimeException("Archivo no encontrado en local: " + realName);
 
         } catch (MalformedURLException e) {
-            throw new RuntimeException("Error al acceder al archivo local: " + nombreAlmacenado, e);
+            throw new RuntimeException("Error al acceder al archivo: " + realName, e);
         }
     }
 
@@ -216,12 +256,7 @@ public class ArchivoStorageService {
             );
         }
 
-        String contentType = archivo.getContentType();
-        if (contentType == null || !TIPOS_PERMITIDOS.contains(contentType)) {
-            throw new IllegalArgumentException(
-                    "Tipo de archivo no permitido: " + contentType + ". Permitidos: PDF, imágenes, Word, Excel, texto."
-            );
-        }
+        // Se omite la validación estricta de tipo de contenido para permitir cualquier tipo de archivo (incluyendo audio)
     }
 
     private String extraerExtension(String filename) {
